plugins {
    id("shared-build-conventions")
}

allprojects {
    apply plugin: 'shared-build-conventions'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}